--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 PORT=8080
 
-MONGOURL=mongodb://localhost:27017/JOBPORTAL
+MONGOURL=mongodb+srv://varunpratap74358:varun74358@cluster0.lnzp0fv.mongodb.net/JOBHUNT?retryWrites=true&w=majority&appName=Cluster0
 
 JWTSECRET=4%^4jgj&^%^&gy&^*
 
